Fixed layout bug

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* ==== TODO fix fing layout issue with footer aaaaaaaa ==== */
-
 /* Global Resets */
 *,
 *::before,
@@ -11,19 +9,14 @@
 
 html {
     position: relative;
-
     min-height: 100%;
 }
 
 /* Body and Typography */
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
+    background-color: #2e1065;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
-    /* margin-bottom: 100px; */
 }
 
 @font-face {
@@ -44,12 +37,6 @@ input,
 button {
     overflow-wrap: break-word;
     font-family: MainFont;
-}
-
-/* Images and Media */
-img {
-    display: block;
-    max-width: 100%;
 }
 
 /* Browser-Specific Styles */
@@ -74,7 +61,6 @@ input[type="number"] {
     background-color: #4c1d95;
     box-shadow: 0px 10px 14px 4px rgba(0, 0, 0, 0.1);
     z-index: 1;
-    /* border: 1px solid red; */
 }
 
 .header h1 {
@@ -87,16 +73,12 @@ input[type="number"] {
 .main-container {
     display: flex;
     flex-direction: column;
-    background-color: #2e1065;
-    width: 100%;
-    /* height: 100%; */
 }
 
 /* Add Book Button */
 .new-book-btn-container {
     align-self: center;
     margin: 15px;
-    /* border: 1px solid red; */
 }
 
 
@@ -106,10 +88,8 @@ input[type="number"] {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 42px;
     margin-top: 20px;
+    margin-bottom: 50px;
     padding: 12px;
-
-    /* border: 1px solid red; */
-
 }
 
 /* Library Cards */
@@ -153,13 +133,10 @@ input[type="number"] {
     gap: 12px;
 }
 
-
-
 /* Footer */
 .footer {
-    /* position: absolute; */
+    position: absolute;
     bottom: 0;
-    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
